@@ -26,4 +26,4 @@ ARMY_POPULATION_DECREASE = 'empop-d'
 
 TRIGGER_BOSS_DIES = 'embss-die'
 
-VANILLA_MAP_COLOR = {r=224,g=35,b=33}
+VANILLA_MAP_COLOR = {r=224, g=35, b=33, a=255}
