@@ -31,7 +31,7 @@ local enemies_subgroups = {
 
 
 local set_resistance = function(unit)
-    if enemies_subgroups[unit.subgroup] and ErmForceHelper.is_erm_unit(unit) then
+    if enemies_subgroups[unit.subgroup] and ErmUnitHelper.is_erm_unit(unit) then
         local name = ErmForceHelper.split_name(unit.name)
         for _, damage_type in pairs(damage_types) do
             if data.raw["damage-type"][damage_type[1]] and unit.resistances and name[3] then
@@ -55,7 +55,7 @@ for _, unit in pairs(data.raw["unit-spawner"]) do
 end
 
 for _, unit in pairs(data.raw.unit) do
-    if controlable_subgroups[unit.subgroup] and ErmForceHelper.is_erm_unit(unit) then
+    if controlable_subgroups[unit.subgroup] and ErmUnitHelper.is_erm_unit(unit) then
         for _, damage_type in pairs(damage_types) do
             if data.raw["damage-type"][damage_type[1]] and unit.resistances then
                 table.insert(unit.resistances,{ type = damage_type[1], percent = 75})
